--- a/daznosok_pyspark_2_dz.ipynb
+++ b/daznosok_pyspark_2_dz.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 103,
    "id": "045e1eaa",
    "metadata": {},
    "outputs": [],
@@ -24,18 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 104,
    "id": "8499ed72",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = spark.read.option('inferSchema', 'true')\\\n",
     ".option('header', 'true').csv(\"/users/dznosok/downloads/owid-covid-data.csv\")"
@@ -121,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476c8a26",
+   "id": "faf08775",
    "metadata": {},
    "source": [
     "Выберите 15 стран с наибольшим процентом переболевших на 31 марта (в выходящем датасете необходимы колонки: iso_code, страна, процент переболевших)"
@@ -129,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 105,
    "id": "28f33f60",
    "metadata": {},
    "outputs": [
@@ -137,25 +129,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+--------------+--------------------+\n",
-      "|iso_code|      location|             procent|\n",
-      "+--------+--------------+--------------------+\n",
-      "|     VAT|       Vatican|0.007416563658838072|\n",
-      "|     SMR|    San Marino|0.006953857033413872|\n",
-      "|     AND|       Andorra|0.004866368989840161|\n",
-      "|     LUX|    Luxembourg|0.003479366621084...|\n",
-      "|     ISL|       Iceland|0.003326007326007326|\n",
-      "|     ESP|         Spain|0.002051618975538...|\n",
-      "|     CHE|   Switzerland|0.001918628875358...|\n",
-      "|     LIE| Liechtenstein|0.001783045336549...|\n",
-      "|     ITA|         Italy|0.001749732078891...|\n",
-      "|     MCO|        Monaco|0.001325043318723...|\n",
-      "|     AUT|       Austria|0.001130307337004...|\n",
-      "|     BEL|       Belgium|0.001102279833947...|\n",
-      "|OWID_EUN|European Union|8.938996679530879E-4|\n",
-      "|     DEU|       Germany|8.570615766540952E-4|\n",
-      "|     NOR|        Norway|8.560768916052816E-4|\n",
-      "+--------+--------------+--------------------+\n",
+      "+--------+-------------+-------------------+\n",
+      "|iso_code|     location|            procent|\n",
+      "+--------+-------------+-------------------+\n",
+      "|     AND|      Andorra|0.15543907331909662|\n",
+      "|     MNE|   Montenegro|0.14523725364693293|\n",
+      "|     CZE|      Czechia|0.14308848404077998|\n",
+      "|     SMR|   San Marino| 0.1393717956273204|\n",
+      "|     SVN|     Slovenia|0.10370805779121203|\n",
+      "|     LUX|   Luxembourg|0.09847342390123583|\n",
+      "|     ISR|       Israel|0.09625106044786802|\n",
+      "|     USA|United States|0.09203010995860707|\n",
+      "|     SRB|       Serbia|0.08826328557933491|\n",
+      "|     BHR|      Bahrain|0.08488860079114566|\n",
+      "|     PAN|       Panama|0.08228739065460762|\n",
+      "|     PRT|     Portugal|0.08058699735120368|\n",
+      "|     EST|      Estonia| 0.0802268157965955|\n",
+      "|     SWE|       Sweden|0.07969744347858805|\n",
+      "|     LTU|    Lithuania|0.07938864728274825|\n",
+      "+--------+-------------+-------------------+\n",
       "only showing top 15 rows\n",
       "\n"
      ]
@@ -163,14 +155,14 @@
    ],
    "source": [
     "df.select('iso_code', 'location', (F.col('total_cases')/F.col('population')).alias('procent'))\\\n",
-    ".where(F.col('date') == '2020-03-31')\\\n",
+    ".where(F.col('date') == '2021-03-31')\\\n",
     ".orderBy(F.col('procent').desc())\\\n",
     ".show(15)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "56e8c14a",
+   "id": "2637c4fb",
    "metadata": {},
    "source": [
     "Top 10 стран с максимальным зафиксированным кол-вом новых случаев за последнюю неделю марта 2021 в отсортированном порядке по убыванию\n",
@@ -179,7 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 108,
+   "id": "a76c4180",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "window = W.partitionBy(\"location\").orderBy(F.col(\"new_cases\").desc())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "id": "236035eb",
    "metadata": {},
    "outputs": [
@@ -187,35 +189,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+-------------+---------+\n",
-      "|      date|     location|new_cases|\n",
-      "+----------+-------------+---------+\n",
-      "|2021-04-04|        India| 103558.0|\n",
-      "|2021-04-03|        India|  93249.0|\n",
-      "|2021-04-01|       Brazil|  91097.0|\n",
-      "|2021-03-31|       Brazil|  90638.0|\n",
-      "|2021-04-02|        India|  89129.0|\n",
-      "|2021-03-30|       Brazil|  84494.0|\n",
-      "|2021-04-01|        India|  81466.0|\n",
-      "|2021-04-04|       France|  80629.0|\n",
-      "|2021-04-01|United States|  79045.0|\n",
-      "|2021-03-31|        India|  72330.0|\n",
-      "+----------+-------------+---------+\n",
+      "+----------+--------------------+---------+\n",
+      "|      date|            location|new_cases|\n",
+      "+----------+--------------------+---------+\n",
+      "|2021-04-01|              Poland|  35253.0|\n",
+      "|2021-04-03|             Ukraine|  20456.0|\n",
+      "|2021-04-02|         Philippines|  15298.0|\n",
+      "|2021-03-30|              Serbia|   9983.0|\n",
+      "|2021-04-01|            Cameroon|   9668.0|\n",
+      "|2021-03-30|              Greece|   4322.0|\n",
+      "|2021-03-29|              Kosovo|   4257.0|\n",
+      "|2021-03-29|Bosnia and Herzeg...|   3755.0|\n",
+      "|2021-04-01|            Ethiopia|   2372.0|\n",
+      "|2021-04-04|           Venezuela|   1786.0|\n",
+      "+----------+--------------------+---------+\n",
       "only showing top 10 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df.select('date', 'location', 'new_cases')\\\n",
+    "df.withColumn('rn', F.row_number().over(window))\\\n",
+    ".select('date', 'location', 'new_cases')\\\n",
     ".where(F.col('date') >= '2021-03-29').where(F.col('date') <= '2021-04-04')\\\n",
     ".where(F.col('continent') != 'null')\\\n",
+    ".where(F.col('rn')==1)\\\n",
     ".orderBy(F.col('new_cases').desc()).show(10)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fd430e71",
+   "id": "c7bf9c5d",
    "metadata": {},
    "source": [
     "Посчитайте изменение случаев относительно предыдущего дня в России за последнюю неделю марта 2021. (например: в россии вчера было 9150 , сегодня 8763, итог: -387) (в выходящем датасете необходимы колонки: число, кол-во новых случаев вчера, кол-во новых случаев сегодня, дельта)\n",
@@ -225,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "ea91805c",
+   "id": "cf81dc10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "aff0541e",
+   "id": "ad45d04f",
    "metadata": {
     "scrolled": false
    },
@@ -281,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "ca8c5b75",
+   "id": "547b3ffa",
    "metadata": {},
    "outputs": [],
    "source": [
