--- a/daznosok_pyspark_2_dz.ipynb
+++ b/daznosok_pyspark_2_dz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "e99dc605",
    "metadata": {},
    "outputs": [],
@@ -14,20 +14,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "id": "045e1eaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/11/02 14:30:53 WARN Utils: Your hostname, MacBook.local resolves to a loopback address: 127.0.0.200; using 192.168.0.100 instead (on interface en0)\n",
+      "23/11/02 14:30:53 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/11/02 14:30:53 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "spark = SparkSession.builder.appName('test_name').getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "id": "8499ed72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 1:=========>                                                 (1 + 5) / 6]\r",
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "df = spark.read.option('inferSchema', 'true')\\\n",
     ".option('header', 'true').csv(\"/users/dznosok/downloads/owid-covid-data.csv\")"
@@ -113,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faf08775",
+   "id": "e88d389d",
    "metadata": {},
    "source": [
     "Выберите 15 стран с наибольшим процентом переболевших на 31 марта (в выходящем датасете необходимы колонки: iso_code, страна, процент переболевших)"
@@ -121,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "id": "28f33f60",
    "metadata": {},
    "outputs": [
@@ -129,32 +152,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+-------------+-------------------+\n",
-      "|iso_code|     location|            procent|\n",
-      "+--------+-------------+-------------------+\n",
-      "|     AND|      Andorra|0.15543907331909662|\n",
-      "|     MNE|   Montenegro|0.14523725364693293|\n",
-      "|     CZE|      Czechia|0.14308848404077998|\n",
-      "|     SMR|   San Marino| 0.1393717956273204|\n",
-      "|     SVN|     Slovenia|0.10370805779121203|\n",
-      "|     LUX|   Luxembourg|0.09847342390123583|\n",
-      "|     ISR|       Israel|0.09625106044786802|\n",
-      "|     USA|United States|0.09203010995860707|\n",
-      "|     SRB|       Serbia|0.08826328557933491|\n",
-      "|     BHR|      Bahrain|0.08488860079114566|\n",
-      "|     PAN|       Panama|0.08228739065460762|\n",
-      "|     PRT|     Portugal|0.08058699735120368|\n",
-      "|     EST|      Estonia| 0.0802268157965955|\n",
-      "|     SWE|       Sweden|0.07969744347858805|\n",
-      "|     LTU|    Lithuania|0.07938864728274825|\n",
-      "+--------+-------------+-------------------+\n",
+      "+--------+-------------+-------+\n",
+      "|iso_code|     location|procent|\n",
+      "+--------+-------------+-------+\n",
+      "|     LUX|   Luxembourg|   9.85|\n",
+      "|     ISR|       Israel|   9.63|\n",
+      "|     USA|United States|   9.20|\n",
+      "|     SRB|       Serbia|   8.83|\n",
+      "|     BHR|      Bahrain|   8.49|\n",
+      "|     PAN|       Panama|   8.23|\n",
+      "|     PRT|     Portugal|   8.06|\n",
+      "|     EST|      Estonia|   8.02|\n",
+      "|     SWE|       Sweden|   7.97|\n",
+      "|     LTU|    Lithuania|   7.94|\n",
+      "|     BEL|      Belgium|   7.61|\n",
+      "|     NLD|  Netherlands|   7.54|\n",
+      "|     GEO|      Georgia|   7.06|\n",
+      "|     ESP|        Spain|   7.02|\n",
+      "|     LIE|Liechtenstein|   7.00|\n",
+      "+--------+-------------+-------+\n",
       "only showing top 15 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df.select('iso_code', 'location', (F.col('total_cases')/F.col('population')).alias('procent'))\\\n",
+    "df.select('iso_code', 'location', F.format_number((F.col('total_cases')/F.col('population')*100), 2)\n",
+    "          .alias('procent'))\\\n",
     ".where(F.col('date') == '2021-03-31')\\\n",
     ".orderBy(F.col('procent').desc())\\\n",
     ".show(15)"
@@ -162,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2637c4fb",
+   "id": "7c064a56",
    "metadata": {},
    "source": [
     "Top 10 стран с максимальным зафиксированным кол-вом новых случаев за последнюю неделю марта 2021 в отсортированном порядке по убыванию\n",
@@ -171,8 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "a76c4180",
+   "execution_count": 9,
+   "id": "93f66fce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "id": "236035eb",
    "metadata": {},
    "outputs": [
@@ -189,37 +213,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+--------------------+---------+\n",
-      "|      date|            location|new_cases|\n",
-      "+----------+--------------------+---------+\n",
-      "|2021-04-01|              Poland|  35253.0|\n",
-      "|2021-04-03|             Ukraine|  20456.0|\n",
-      "|2021-04-02|         Philippines|  15298.0|\n",
-      "|2021-03-30|              Serbia|   9983.0|\n",
-      "|2021-04-01|            Cameroon|   9668.0|\n",
-      "|2021-03-30|              Greece|   4322.0|\n",
-      "|2021-03-29|              Kosovo|   4257.0|\n",
-      "|2021-03-29|Bosnia and Herzeg...|   3755.0|\n",
-      "|2021-04-01|            Ethiopia|   2372.0|\n",
-      "|2021-04-04|           Venezuela|   1786.0|\n",
-      "+----------+--------------------+---------+\n",
+      "+----------+-------------+---------+\n",
+      "|      date|     location|new_cases|\n",
+      "+----------+-------------+---------+\n",
+      "|2021-04-04|        India| 103558.0|\n",
+      "|2021-04-01|       Brazil|  91097.0|\n",
+      "|2021-04-04|       France|  80629.0|\n",
+      "|2021-04-01|United States|  79045.0|\n",
+      "|2021-04-03|       Turkey|  44756.0|\n",
+      "|2021-04-01|       Poland|  35253.0|\n",
+      "|2021-03-31|      Germany|  25014.0|\n",
+      "|2021-03-31|        Italy|  23887.0|\n",
+      "|2021-04-03|      Ukraine|  20456.0|\n",
+      "|2021-03-30|       Sweden|  16427.0|\n",
+      "+----------+-------------+---------+\n",
       "only showing top 10 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df.withColumn('rn', F.row_number().over(window))\\\n",
-    ".select('date', 'location', 'new_cases')\\\n",
-    ".where(F.col('date') >= '2021-03-29').where(F.col('date') <= '2021-04-04')\\\n",
+    "df.where(F.col('date') >= '2021-03-29').where(F.col('date') <= '2021-04-04')\\\n",
     ".where(F.col('continent') != 'null')\\\n",
+    ".withColumn('rn', F.row_number().over(window))\\\n",
     ".where(F.col('rn')==1)\\\n",
-    ".orderBy(F.col('new_cases').desc()).show(10)\n"
+    ".select('date', 'location', 'new_cases')\\\n",
+    ".orderBy(F.col('new_cases').desc()).show(10)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c7bf9c5d",
+   "id": "3afd6236",
    "metadata": {},
    "source": [
     "Посчитайте изменение случаев относительно предыдущего дня в России за последнюю неделю марта 2021. (например: в россии вчера было 9150 , сегодня 8763, итог: -387) (в выходящем датасете необходимы колонки: число, кол-во новых случаев вчера, кол-во новых случаев сегодня, дельта)\n",
@@ -229,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "cf81dc10",
+   "id": "2fcee2ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "ad45d04f",
+   "id": "00fe4b2e",
    "metadata": {
     "scrolled": false
    },
@@ -284,8 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "547b3ffa",
+   "execution_count": 12,
+   "id": "a0a05456",
    "metadata": {},
    "outputs": [],
    "source": [
